--- a/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
+++ b/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
@@ -78,7 +78,6 @@
         <DCC_Optimize>false</DCC_Optimize>
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
         <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
-        <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_Define>DEF_CRYPT_ALL;$(DCC_Define)</DCC_Define>
@@ -137,7 +136,7 @@
         <DCCReference Include="..\..\..\..\Common\UnitNICUtil.pas"/>
         <DCCReference Include="..\UnitHiconMariaDBUtil.pas"/>
         <DCCReference Include="UnitHiConJsonUtil.pas"/>
-        <DCCReference Include="..\..\..\..\Common\UnitGZipUtil.pas"/>
+        <DCCReference Include="..\UnitHiconMPMData.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
