--- a/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
+++ b/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
@@ -153,6 +153,12 @@
         <DCCReference Include="..\..\..\..\Common\Form\FrmNextGrid.pas">
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="FrmSearchModuleByTagName.pas">
+            <Form>SrchModuleByTagF</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\UnitHiconDBData.pas"/>
+        <DCCReference Include="..\UnitHiconOWSUtil.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
